--- a/_config.yml
+++ b/_config.yml
@@ -56,15 +56,17 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
+  - jekyll-scholar
+  - jekyll-figure
 
 author:
   name   : "Danilo de Oliveira"
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "I like visual and spoken language, and I work with data."
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://orsdanilo.github.io"
+  #  - label: "Website"
+  #    icon: "fas fa-fw fa-link"
+  #    url: "https://orsdanilo.github.io"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/in/orsdanilo"
@@ -73,7 +75,7 @@ author:
       url: "https://github.com/orsdanilo"
     - label: "DeviantArt"
       icon: "fab fa-fw fa-deviantart"
-      url: "https://deviantart.com/"
+      url: "https://deviantart.com/orsdanilo"
 
 footer:
   links:
@@ -85,7 +87,7 @@ footer:
       url: "https://github.com/orsdanilo"
     - label: "DeviantArt"
       icon: "fab fa-fw fa-deviantart"
-      url: "https://deviantart.com/"
+      url: "https://deviantart.com/orsdanilo"
 
 defaults:
   # _posts
@@ -113,3 +115,8 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+
+comments:
+  provider: "disqus"
+  disqus:
+    shortname: "orsdanilo-github-io"
