--- a/_config.yml
+++ b/_config.yml
@@ -75,9 +75,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/orsdanilo"
-    - label: "DeviantArt"
-      icon: "fab fa-fw fa-deviantart"
-      url: "https://deviantart.com/orsdanilo"
+  #  - label: "DeviantArt"
+  #    icon: "fab fa-fw fa-deviantart"
+  #    url: "https://deviantart.com/orsdanilo"
 
 footer:
   links:
@@ -87,9 +87,9 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/orsdanilo"
-    - label: "DeviantArt"
-      icon: "fab fa-fw fa-deviantart"
-      url: "https://deviantart.com/orsdanilo"
+  #  - label: "DeviantArt"
+  #    icon: "fab fa-fw fa-deviantart"
+  #    url: "https://deviantart.com/orsdanilo"
 
 defaults:
   # _posts
