Add site description

--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: orsdanilo
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Data and Art stuff
 twitter_username: username
 github_username: orsdanilo
 search: true
@@ -75,9 +73,6 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/orsdanilo"
-  #  - label: "DeviantArt"
-  #    icon: "fab fa-fw fa-deviantart"
-  #    url: "https://deviantart.com/orsdanilo"
 
 footer:
   links:
@@ -87,9 +82,6 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/orsdanilo"
-  #  - label: "DeviantArt"
-  #    icon: "fab fa-fw fa-deviantart"
-  #    url: "https://deviantart.com/orsdanilo"
 
 defaults:
   # _posts
