--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: orsdanilo
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  Data and Art stuff
+  Data and art stuff
 twitter_username: username
 github_username: orsdanilo
 search: true
@@ -62,7 +62,7 @@ plugins:
 author:
   name   : "Danilo de Oliveira"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "I like visual and spoken language, and I work with data."
+  bio    : "I like visual and spoken language, I draw stuff and I work with data."
   links:
   #  - label: "Website"
   #    icon: "fas fa-fw fa-link"
