--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/orsdanilo"
+    - label: "Art Portfolio"
+      icon: "fas fa-fw fa-paint-brush"
+      url: "/gallery/"
 
 footer:
   links:
@@ -82,6 +85,9 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/orsdanilo"
+    - label: "Art Portfolio"
+      icon: "fas fa-fw fa-paint-brush"
+      url: "/gallery/"
 
 defaults:
   # _posts
