--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ plugins:
 author:
   name   : "Danilo de Oliveira"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "I like visual and spoken language, I draw stuff and I work with data."
+  bio    : "I like visual and spoken language and I draw stuff from time to time."
   links:
   #  - label: "Website"
   #    icon: "fas fa-fw fa-link"
